==> crackerland/picoclock-proto/platform/pico/QMI8658/QMI8658.c <==
#include "QMI8658.h"
#define QMI8658_SLAVE_ADDR_L 0x6a
#define QMI8658_SLAVE_ADDR_H 0x6b
#define QMI8658_printf printf
#define QMI8658_UINT_MG_DPS
#define IMU_INT1_GPIO_PIN 23
#define IMU_INT2_GPIO_PIN 24
#define STATUS1_WOM 0b100
#define STATUS1_CTRL9 0b0

void DEV_I2C_Write_Byte(uint8_t addr, uint8_t reg, uint8_t Value)
{
    uint8_t data[2] = {reg, Value};
    i2c_write_blocking(I2C_PORT, addr, data, 2, false);
}

void DEV_I2C_Write_nByte(uint8_t addr, uint8_t *pData, uint32_t Len)
{
    i2c_write_blocking(I2C_PORT, addr, pData, Len, false);
}

uint8_t DEV_I2C_Read_Byte(uint8_t addr, uint8_t reg)
{
    uint8_t buf;
    i2c_write_blocking(I2C_PORT, addr, &reg, 1, true);
    i2c_read_blocking(I2C_PORT, addr, &buf, 1, false);
    return buf;
}

void DEV_I2C_Read_Register(uint8_t addr, uint8_t reg, uint16_t *value)
{
    uint8_t tmpi[2];
    i2c_write_blocking(I2C_PORT, addr, &reg, 1, true); // true to keep master control of bus
    i2c_read_blocking(I2C_PORT, addr, tmpi, 2, false);
    *value = (((uint16_t)tmpi[0] << 8) | (uint16_t)tmpi[1]);
}

void DEV_I2C_Read_nByte(uint8_t addr, uint8_t reg, uint8_t *pData, uint32_t Len)
{
    i2c_write_blocking(I2C_PORT, addr, &reg, 1, true);
    i2c_read_blocking(I2C_PORT, addr, pData, Len, false);
}

void QMI8658_enableWakeOnMotion(void)
{
	// QMI8658C doc 9.4 "Configuration Procedure":
	// The host processor is responsible for all configurations
	// necessary to put the QMI8658C into WoM mode. The
	// specific sequence of operations performed by the host
	// processor to enable WoM is shown in Figure 10
	// (Figure 10)
	// 1. [Disable sensors. (Write 0x00 to CTRL7)]
	// 2. [Set Accelerometer sample rate and scale (Write CTRL2)]
	// 3. [Set Wake on Motion (WoM) Threshold in CAL1_L; select interrupt, polarity and blanking time in CAL1_H]
	// 4. [Execute CTRL9 command to configure WoM mode]
	// 5. [Set Accelerometer enable bit in CTRL7]

	// 1. Disable sensors.
	QMI8658_enableSensors(QMI8658_CTRL7_DISABLE_ALL);

	// 2. Set accelerometer sample rate and scale.
	QMI8658_config_acc(QMI8658AccRange_2g, QMI8658AccOdr_LowPower_21Hz, QMI8658Lpf_Disable, QMI8658St_Disable);

	// 3. (A) Set wake on motion threshold.
	enum QMI8658_WakeOnMotionThreshold threshold = QMI8658WomThreshold_low;

	// WoM Threshold: absolute value in mg (with 1mg/LSB resolution).
	QMI8658_write_reg(QMI8658Register_Cal1_L, (unsigned char)QMI8658WomThreshold_low); 

	// 3. (B) Select interrupt, polarity, and blanking time.
	const unsigned char blankingTimeMask = 0b00111111;

	// CAL1_H register:
	// 7:6 Interrupt select
	// 0:5 Interrupt blanking time (in number of accelerometer samples)
	// ------
	// Setting interrupt select to 00 - INT1 with initial value 0.
	// Setting blanking time to 4 samples.
	QMI8658_write_reg(
		QMI8658Register_Cal1_H, 
		(unsigned char)QMI8658_Int1 | (unsigned char)QMI8658State_low | (0x04 & blankingTimeMask));

	// 4. Enable WOM through the matching CTRL9 command.
	QMI8658_write_reg(QMI8658Register_Ctrl9, QMI8658_Ctrl9_Cmd_WoM_Setting);

	sleep_ms(5);
	printf("WOM enabled\n");
	QMI8658_enableSensors(QMI8658_CTRL7_ACC_ENABLE);
	sleep_ms(100);
	//uint8_t r;
	//QMI8658_read_reg(QMI8658Register_Status1,&r,1);
	//printf("Status1: %02x\n",r);


	// IRQ GPIO23 / gpio_callback()
	//while(1){
	//	QMI8658_read_reg(QMI8658Register_Status1,&womCmd[0],1);
	//	printf("%02x\n",womCmd[0]);
	//	if(womCmd[0]&QMI8658_STATUS1_WAKEUP_EVENT){ break; }
	//	sleep_ms(100);
	//}
	//QMI8658_disableWakeOnMotion();

}

unsigned char QMI8658_init(i2c_inst_t* i2cInstance)
{
    // I2C Config
    i2c_init(i2cInstance, 400 * 1000);
    gpio_set_function(DEV_SDA_PIN, GPIO_FUNC_I2C);
    gpio_set_function(DEV_SCL_PIN, GPIO_FUNC_I2C);
    gpio_pull_up(DEV_SDA_PIN);
    gpio_pull_up(DEV_SCL_PIN);

	gpio_init(IMU_INT1_GPIO_PIN);
	gpio_set_dir(IMU_INT1_GPIO_PIN, GPIO_IN);

	// TODO: Do we want a pull down?
	gpio_pull_down(IMU_INT1_GPIO_PIN);

	gpio_set_irq_enabled_with_callback(
		IMU_INT1_GPIO_PIN, 
		GPIO_IRQ_EDGE_RISE, 
		true, 
		OnInterrupt1);

	QMI8658_reset();
	sleep_ms(100);
	unsigned char QMI8658_chip_id = 0x00;
	unsigned char QMI8658_revision_id = 0x00;
	unsigned char QMI8658_slave[2] = {QMI8658_SLAVE_ADDR_L, QMI8658_SLAVE_ADDR_H};
	unsigned char iCount = 0;
	int retry = 0;

	while (iCount < 2)
	{
		QMI8658_slave_addr = QMI8658_slave[iCount];
		retry = 0;

		while ((QMI8658_chip_id != 0x05) && (retry++ < 5))
		{

			QMI8658_read_reg(QMI8658Register_WhoAmI, &QMI8658_chip_id, 1);
			// QMI8658_printf("QMI8658Register_WhoAmI = 0x%x\n", QMI8658_chip_id);
		}

		if (QMI8658_chip_id == 0x05)
		{
			break;
		}

		iCount++;
	}

	QMI8658_read_reg(QMI8658Register_Revision, &QMI8658_revision_id, 1);
	if (QMI8658_chip_id == 0x05)
	{
		// QMI8658_printf("QMI8658_init slave=0x%x  \r\nQMI8658Register_WhoAmI=0x%x 0x%x\n", QMI8658_slave_addr, QMI8658_chip_id, QMI8658_revision_id);
		QMI8658_write_reg(QMI8658Register_Ctrl1, 0x60);
		QMI8658_config.inputSelection = QMI8658_CONFIG_ACCGYR_ENABLE; // QMI8658_CONFIG_ACCGYR_ENABLE;
		QMI8658_config.accRange = QMI8658AccRange_8g;
		QMI8658_config.accOdr = QMI8658AccOdr_1000Hz;
		QMI8658_config.gyrRange = QMI8658GyrRange_512dps; // QMI8658GyrRange_2048dps   QMI8658GyrRange_1024dps
		QMI8658_config.gyrOdr = QMI8658GyrOdr_1000Hz;
		QMI8658_config.magOdr = QMI8658MagOdr_125Hz;
		QMI8658_config.magDev = MagDev_AKM09918;
		QMI8658_config.aeOdr = QMI8658AeOdr_128Hz;

		QMI8658_Config_apply(&QMI8658_config);
		if (1)
		{
			unsigned char read_data = 0x00;
			QMI8658_read_reg(QMI8658Register_Ctrl1, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl1=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl2, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl2=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl3, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl3=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl4, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl4=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl5, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl5=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl6, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl6=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl7, &read_data, 1);
			// QMI8658_printf("QMI8658Register_Ctrl7=0x%x \n", read_data);
		}
		//		QMI8658_set_layout(2);
		return 1;
	}
	else
	{
		// QMI8658_printf("QMI8658_init fail\n");
		QMI8658_chip_id = 0;
		return 0;
	}
	// return QMI8658_chip_id;
}
