==> carlsuttle/BLE_Server/server3/lib/QMI8658/QMI8658.cpp <==
#include "QMI8658.h"
#define QMI8658_SLAVE_ADDR_L 0x6a
#define QMI8658_SLAVE_ADDR_H 0x6b
#define QMI8658_printf printf
#define QMI8658_UINT_MG_DPS

void QMI8658_enableWakeOnMotion(void)
{
	unsigned char womCmd[3];
	enum QMI8658_Interrupt interrupt = QMI8658_Int1;
	enum QMI8658_InterruptState initialState = QMI8658State_low;
	enum QMI8658_WakeOnMotionThreshold threshold = QMI8658WomThreshold_low;
	unsigned char blankingTime = 0x00;
	const unsigned char blankingTimeMask = 0x3F;

	QMI8658_enableSensors(QMI8658_CTRL7_DISABLE_ALL);
	QMI8658_config_acc(QMI8658AccRange_2g, QMI8658AccOdr_LowPower_21Hz, QMI8658Lpf_Disable, QMI8658St_Disable);

	womCmd[0] = QMI8658Register_Cal1_L; // WoM Threshold: absolute value in mg (with 1mg/LSB resolution)
	womCmd[1] = threshold;
	womCmd[2] = (unsigned char)interrupt | (unsigned char)initialState | (blankingTime & blankingTimeMask);
	QMI8658_write_reg(QMI8658Register_Cal1_L, womCmd[1]);
	QMI8658_write_reg(QMI8658Register_Cal1_H, womCmd[2]);

	// QMI8658_doCtrl9Command(Ctrl9_ConfigureWakeOnMotion);
	//QMI8658_enableSensors(QMI8658_CTRL7_ACC_ENABLE);
	QMI8658_enableSensors(QMI8658_CONFIG_ACCGYR_ENABLE
	// while(1)
	//{
	//	QMI8658_read_reg(QMI8658Register_Status1,&womCmd[0],1);
	//	if(womCmd[0]&0x01)
	//		break;
	// }
}

unsigned char QMI8658_init(void)
{
	unsigned char QMI8658_chip_id = 0x00;
	unsigned char QMI8658_revision_id = 0x00;
	unsigned char QMI8658_slave[2] = { QMI8658_SLAVE_ADDR_L, QMI8658_SLAVE_ADDR_H };
	unsigned char iCount = 0;
	int retry = 0;

	while (iCount < 2)
	{
		QMI8658_slave_addr = QMI8658_slave[iCount];
		retry = 0;

		while ((QMI8658_chip_id != 0x05) && (retry++ < 5))
		{

			QMI8658_read_reg(QMI8658Register_WhoAmI, &QMI8658_chip_id, 1);
			Serial.print("QMI8658Register_WhoAmI = ");
			Serial.println(QMI8658_chip_id);
			//			QMI8658_printf("QMI8658Register_WhoAmI = 0x%x\n", QMI8658_chip_id);
		}
		if (QMI8658_chip_id == 0x05)
		{
			break;
		}
		iCount++;
	}


	QMI8658_read_reg(QMI8658Register_Revision, &QMI8658_revision_id, 1);
	if (QMI8658_chip_id == 0x05)
	{
		Serial.print("QMI8658_init slave = ");
		Serial.println(QMI8658_slave_addr);
		Serial.print("nQMI8658Register_WhoAmI = ");
		Serial.print(QMI8658_chip_id);
		Serial.print(" ");
		Serial.println(QMI8658_revision_id);
		//		QMI8658_printf("QMI8658_init slave=0x%x  \r\nQMI8658Register_WhoAmI=0x%x 0x%x\n", QMI8658_slave_addr, QMI8658_chip_id, QMI8658_revision_id);
		QMI8658_write_reg(QMI8658Register_Ctrl1, 0x60);
		//QMI8658_config.inputSelection = QMI8658_CONFIG_ACCGYR_ENABLE; // QMI8658_CONFIG_ACCGYR_ENABLE;
		QMI8658_config.inputSelection = QMI8658_CONFIG_AE_ENABLE;
		QMI8658_config.accRange =		QMI8658AccRange_4g;
		QMI8658_config.accOdr =			QMI8658AccOdr_1000Hz;
		QMI8658_config.gyrRange =		QMI8658GyrRange_512dps; // QMI8658GyrRange_2048dps   QMI8658GyrRange_1024dps QMI8658AccOdr_62_5Hz
		QMI8658_config.gyrOdr =			QMI8658GyrOdr_1000Hz;
		QMI8658_config.magOdr =			QMI8658MagOdr_125Hz;
		QMI8658_config.magDev =			MagDev_AKM09918;
		QMI8658_config.aeOdr =			QMI8658AeOdr_32Hz;

		QMI8658_Config_apply(&QMI8658_config);


//		if (1)
//		{
			unsigned char read_data = 0x00;
			QMI8658_read_reg(QMI8658Register_Ctrl1, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl1 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl1=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl2, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl2 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl2=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl3, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl3 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl3=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl4, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl4 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl4=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl5, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl5 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl5=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl6, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl6 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl6=0x%x \n", read_data);
			QMI8658_read_reg(QMI8658Register_Ctrl7, &read_data, 1);
			Serial.print("QMI8658Register_Ctrl7 = ");
			Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl7=0x%x \n", read_data);
			//QMI8658_read_reg(QMI8658Register_Ctrl9, &read_data, 1);
			//Serial.print("QMI8658Register_Ctrl9 = ");
			//Serial.println(read_data);
			//			QMI8658_printf("QMI8658Register_Ctrl7=0x%x \n", read_data);
//		}
		//		QMI8658_set_layout(2);
		return 1;
	}
	else
	{
		Serial.println("QMI8658_init fail");
		QMI8658_chip_id = 0;
		return 0;
	}
	// return QMI8658_chip_id;
}

void DEV_I2C_Write_Byte(uint8_t addr, uint8_t reg, uint8_t Value)
{
	Wire.beginTransmission(addr);
	Wire.write(reg);
	Wire.write(Value);
	Wire.endTransmission();
}

void DEV_I2C_Write_nByte(uint8_t addr, uint8_t* pData, uint32_t Len)
{
	Wire.beginTransmission(addr);
	Wire.write(pData, Len);
	Wire.endTransmission();
}

uint8_t DEV_I2C_Read_Byte(uint8_t addr, uint8_t reg)
{
	uint8_t value;

	Wire.beginTransmission(addr);
	Wire.write((byte)reg);
	Wire.endTransmission();

	Wire.requestFrom(addr, (byte)1);
	value = Wire.read();

	return value;
}

void DEV_I2C_Read_Register(uint8_t addr, uint8_t reg, uint16_t* value)
{
	uint8_t tmpi[2];

	Wire.beginTransmission(addr);
	Wire.write(reg);
	// Wire.endTransmission();
	Wire.requestFrom(addr, 2);

	uint8_t i = 0;
	for (i = 0; i < 2; i++) {
		tmpi[i] = Wire.read();
	}
	Wire.endTransmission();
	*value = (((uint16_t)tmpi[0] << 8) | (uint16_t)tmpi[1]);
}

void DEV_I2C_Read_nByte(uint8_t addr, uint8_t reg, uint8_t* pData, uint32_t Len)
{
	Wire.beginTransmission(addr);
	Wire.write(reg);
	Wire.endTransmission();

	Wire.requestFrom(addr, Len);

	uint8_t i = 0;
	for (i = 0; i < Len; i++) {
		pData[i] = Wire.read();
	}
	Wire.endTransmission();
}
